deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planning-poker-cms
  labels:
    app: planning-poker-cms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: planning-poker-cms
  template:
    metadata:
      labels:
        app: planning-poker-cms
    spec:
      containers:
        - name: planning-poker-cms
          image: gcr.io/$PROJECT_ID/planning-poker-cms:0
          ports:
          - containerPort: 1337
---
kind: Service
apiVersion: v1
metadata:
  name: planning-poker-cms
spec:
  type: NodePort
  selector:
    app: planning-poker-cms
  ports:
    - protocol: TCP
      port: 1337
      targetPort: 1337
