deployment/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: planning-poker-cms-lb
  namespace: planning-poker
spec:
  type: LoadBalancer
  selector:
    app: planning-poker-cms
  ports:
    - protocol: TCP
      port: 1337
      targetPort: 1337
